# rotaryclub

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GEMINI.md  README.md  RELEASING.md  TODO.md
.cargo/: config.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-deb.yml  ci.yml
configs/: example_noise.toml
data/: .gitignore  generate-plots.sh  kr6dd-temp29_corr.csv  kr6dd-temp29_zc.csv
examples/: analyze_channels.rs  audio_loopback.rs  bearing_performance_metrics.rs  bench_north_hotspots.rs  check_channels.rs  compute_rotation.rs  filter_test.rs  generate_test_wav.rs  north_tick_timing_metrics.rs  play_wav_file.rs  synthetic_rdf.rs  system_pipeline_performance_metrics.rs
scripts/: analyze_doppler_freq.py  analyze_north_tick.py  analyze_wav.py  bearing_performance_failed_rows_md.py  bearing_performance_report.py  bearing_performance_summary.py  bearing_performance_thresholds.py  check_bearing_performance_metrics.py  check_north_tick_timing_metrics.py  check_north_tick_timing_metrics.sh  north_tick_timing_failed_rows_md.py  north_tick_timing_metrics_thresholds.awk  north_tick_timing_report.py  north_tick_timing_summary.py  north_tick_timing_thresholds.py  perf_schema.py  plot_bearings.py  plot_noise_degradation.py  system_pipeline_report.py  wav_levels.py
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  processing.rs  stats.rs  wav.rs
src/audio/: buffer.rs  capture.rs  mod.rs  source.rs
src/output/: csv.rs  json.rs  kn5r.rs  mod.rs  text.rs
src/rdf/: bearing.rs  bearing_calculator_base.rs  bearing_correlation.rs  bearing_zero_crossing.rs  mod.rs  north_ref.rs  north_ref_common.rs  north_ref_dpll.rs  north_ref_simple.rs
src/signal_processing/: agc.rs  db.rs  dc_removal.rs  detector.rs  filter.rs  filters.rs  fir_bandpass.rs  fir_core.rs  fir_highpass.rs  iir_butterworth_bandpass.rs  iir_butterworth_highpass.rs  math.rs  mod.rs  moving_average.rs  peak_detector.rs  zero_crossing_detector.rs
src/simulation/: measure.rs  mod.rs  noise.rs  signal.rs
src/test_utils/: generate.rs  measure.rs  mod.rs  noise.rs
tests/: bearing_estimation_test.rs  bearing_regression_test.rs  integration_test.rs  noise_robustness_test.rs  north_tick_timing_test.rs  north_tracking_stress_test.rs
tests/test_signals/: generate.rs  mod.rs  noise.rs
