[package]
name = "rotaryclub"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio I/O
cpal = "0.15"

# Signal Processing
iir_filters = "0.1"

# Concurrency and Real-time
crossbeam-channel = "0.5"
audio_thread_priority = "0.32"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"
hound = "3.5"  # WAV file I/O

[dev-dependencies]
# Testing utilities
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
