[package]
name = "rotaryclub"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
# Audio I/O
cpal = "0.17"

# Signal Processing
iir_filters = "0.1"

# Concurrency and Real-time
crossbeam-channel = "0.5"
audio_thread_priority = "0.34"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
log = "0.4"
env_logger = "0.11"
hound = "3.5"  # WAV file I/O
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Testing utilities
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
