[package]
name = "rotaryclub"
version = "1.7.0"
edition = "2024"
authors = ["Christopher Hoover <ch@murgatroid.com>"]
license = "Apache-2.0"
description = "Pseudo-Doppler Radio Direction Finding system"
homepage = "https://github.com/charlieh0tel/rotaryclub"
repository = "https://github.com/charlieh0tel/rotaryclub"

[dependencies]
# Audio I/O
cpal = "0.17"

# Signal Processing
iir_filters = "0.1"
pm-remez = "0.2"

# Concurrency and Real-time
crossbeam-channel = "0.5"
audio_thread_priority = "0.34"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
log = "0.4"
env_logger = "0.11"
hound = "3.5"  # WAV file I/O
rolling-stats = "0.5"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
num-complex = "0.4"

[dev-dependencies]
approx = "0.5"
rotaryclub = { path = ".", features = ["simulation"] }

[[bin]]
name = "generate_wav"
required-features = ["simulation"]

[[bin]]
name = "noise_analysis"
required-features = ["simulation"]

[[bin]]
name = "analyze_wav"

[features]
simulation = ["rand", "rand_distr", "rand_chacha"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.8"

[dependencies.serde_json]
version = "1.0"

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.rand_distr]
version = "0.4"
optional = true

[dependencies.rand_chacha]
version = "0.3"
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

[package.metadata.deb]
maintainer = "Christopher Hoover <ch@murgatroid.com>"
copyright = "2024-2026, Christopher Hoover"
license-file = ["LICENSE", "4"]
extended-description = """\
A pseudo-Doppler radio direction finding (RDF) system implementation in Rust.
Processes stereo audio from a rotating antenna array to calculate radio signal
bearings with high accuracy (~1-2° with correlation method).

Features:
- Two bearing calculation methods (zero-crossing and I/Q correlation)
- Digital phase-locked loop (DPLL) for robust north reference tracking
- Automatic gain control (AGC) for varying signal strengths
- Real-time audio processing with low latency
- CLI with configurable parameters"""
section = "hamradio"
priority = "optional"
depends = "$auto, libasound2"
assets = [
    ["target/release/rotaryclub", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rotaryclub/", "644"],
    ["DESIGN.md", "usr/share/doc/rotaryclub/", "644"],
]
